# bobcat-miner-python

./: .gitignore  Dockerfile  Dockerfile.arm  Dockerfile.dev  Makefile  README.md  docker-compose.yml  entrypoint-dev.sh  entrypoint-tests.sh  entrypoint.sh  env.example  pyproject.toml  tests-entrypoint.sh
.devcontainer/: devcontainer.json  settings.json
.devcontainer/fancy-awesome-bobcat/: entrypoint.sh
.devcontainer/fancy-awesome-bobcat/src/app/: resync.sh  server.py  start.sh  state.txt
.github/workflows/: lint.yaml  release.yaml  tests.yaml
docs/: bobcat_sdk.md  contributions.md  raspberrypi-deployment.md
docs/observations/: README.md  fastsync-test.md  internet-outage-test.md  reboot-test.md  reset-test.md  resync-test.md
docs/observations/errors/: unknown-error.md
fancy-awesome-bobcat/: Dockerfile  Makefile  README.md  entrypoint.sh  requirements.txt
fancy-awesome-bobcat/src/app/: data.py  reboot.sh  server.py  stop.sh
fancy-awesome-bobcat/src/bobcat/: __init__.py  reboot.sh  reset.sh  server.py  start.sh
src/: __init__.py  bobcat.py  repair.py
src/app/: bobcat.py  checks.py  config.py  main.py  tests.py
src/bobcat/: bobcat.py  diagnoser.py
src/bobcat_miner/: __init__.py  api.py  autopilot.py  autpilot.py.temp  base.py  bobcat.py  bobcat_api.py  bobcat_base.py  bobcat_connection.py  bobcat_errors.py  cli.py  connection.py  constants.py  diagnoser.py  errors.py  helpers.py  helpers.py.embed.example  logger.py
src/bobcat_miner.old/: __init__.py  autopilot.py  bobcat.py  cli.py  helpers.py
tests/: __init__.py  logger_fun.py  mock_bobcat.py  mock_endpoints.py  test_api.py  test_autopilot.py  test_autopilot.py.off  test_autopilot.py.old  test_bobcat.py  test_bobcat.py.off  test_bobcat_api.py  test_bobcat_api.py.off  test_bobcat_autopilot.py  test_bobcat_connection.py  test_bobcat_diagnoser.py  test_diagnoser.py  test_diagnoser.py.off  tests.py
