[tool.poetry]
name = "bobcat-miner"
version = "0.14.4"
authors = ["Aidan Melen <aidanmelen@protonmail.com>"]
license = "MIT"
description = "A command line tool used to automate the Bobcat miner. This project also offers a robust python SDK's for interacting with the Bobcat miner."
readme = "README.md"
homepage = "https://github.com/aidanmelen/bobcat-miner-python"
repository = "https://github.com/aidanmelen/bobcat-miner-python"
keywords = ["helium", "bobcat", "miner"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.0"
backoff = "^1.11.1"
filelock = "^3.4.2"
discord-lumberjack = "^1.0.4"
click = "^8.0.3"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.scripts]
bobcat = "bobcat_miner.cli:cli"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"