[tool.poetry]
name = "bobcat-miner"
version = "0.16.6"
authors = ["Aidan Melen <aidanmelen@protonmail.com>"]
license = "MIT"
description = "Automate the Bobcat miner from the command line."
readme = "README.md"
homepage = "https://github.com/aidanmelen/bobcat-miner-python"
repository = "https://github.com/aidanmelen/bobcat-miner-python"
keywords = ["helium", "bobcat", "miner"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
backoff = "^1.11.1"
beautifulsoup4 = "^4.10.0"
click = "^8.0.3"
discord-lumberjack = "^1.0.4"
filelock = "^3.4.2"
requests = "^2.27.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[tool.poetry.scripts]
bobcat = "bobcat_miner.cli:cli"

[build-system]
requires = ["poetry_core>=1.0.0", "cryptography<3"]
build-backend = "poetry.core.masonry.api"